# etlr

./: Cargo.toml
app/: Cargo.toml
app/src/: lib.rs  templates.rs  yaml.rs
app/src/config/: app.rs  defaults.rs  export.rs  mod.rs
app/src/fs/: yaml.rs
app/src/pipelines/: export.rs  traits.rs
app/src/std/: date.rs  result.rs
app/src/templates/: base.rs  errors.rs  export.rs  import.rs  layout.rs  mod.rs  postprocess.rs  processing.rs  traits.rs  workflow.rs
app/src/yaml/: columns.rs  name_value.rs  reader.rs
config/: .etlrc.dev.yml  .etlrc.prod.yml  .etlrc.test.yml  .etlrc.yml
lib/src/: env.rs  path.rs  templates.rs  yaml.rs
lib/src/std/: decimal.rs  string.rs
lib/src/templates/: errors.rs  export.rs  file.rs  import.rs  layout.rs  postprocess.rs  prelude.rs
lib/src/yaml/: columns.rs  errors.rs  reader.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: cli.rs  env.rs  errors.rs  lib.rs  main.rs  path.rs
src/config/: app.rs  database.rs  errors.rs  import.rs  inbox.rs  logging.rs  mod.rs  plugins.rs  workflow.rs  yaml.rs
src/config/database/: connection.rs  datasource.rs  defaults.rs  dialect.rs
src/config/import/: archive.rs  failed.rs
src/config/logging/: base.rs  database.rs  defaults.rs  file.rs  severity.rs  splunk.rs
src/fs/: yaml.rs
src/pipelines/: builder.rs  export.rs  import.rs  mod.rs  options.rs  traits.rs
src/std/: clock.rs  date.rs  datetime.rs  decimal.rs  errors.rs  mod.rs  regex.rs  string.rs  vector.rs
src/std/tests/: date.rs  datetime.rs  (+3 more)
src/templates/: base.rs  category.rs  defaults.rs  errors.rs  export.rs  file.rs  format.rs  import.rs  layout.rs  mod.rs  traits.rs
(+175 files in other folders)
