[package]
name = "etlr"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5"
colored = "3.0"
confy = "1.0"
constcat = "0.6"
dotenv = "0.15"
env_logger = "0.11"
home = "0.5"
log = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tiberius = "0.12"
