[package]
name = "etlr"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5"
colored = "3.1"
confy = "1.0"
constcat = "0.6"
dotenv = "0.15"
either = "1.15"
env_logger = "0.11"
home = "0.5"
include_dir = { version = "0.7", features = ["glob"] }
lazy-regex = "3.6"
log = "0.4"
path-absolutize = "3.1"
path-clean = "1.0"
phf = { version = "0.13", features = ["macros"] }
regex = "1.12"
rust_decimal = "1.40"
rust_decimal_macros = "1.40"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tiberius = "0.12"

[dev-dependencies]
rstest = "0.26"
rstest_reuse = "0.7"
rxpect = "0.9"
